# CSCI_6221_Rust

./: .gitignore
secure_password_vault/: .gitignore  Cargo.toml  README.md  Secure_Password_Vault_Complete_Documentation.docx  Secure_Password_Vault_Presentation_Project.pptx  Trunk.toml  index.html  style.css  vault_backup.json
secure_password_vault/src/: audit.rs  cli.rs  components.rs  crypto.rs  lib.rs  main.rs  password_generator.rs  storage.rs  storage_wasm.rs  vault.rs
