[package]
name = "password-vault-web"
version = "1.0.0"
edition = "2021"
authors = ["Owen Chibanda", "Jasmine Sciarillo", "Aryan Bhosale"]
description = "A secure password manager built with Rust and Leptos (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Storage",
    "Clipboard",
    "Navigator",
] }

aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.21"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde", "wasmbind"] }

uuid = { version = "1.6", features = ["v4", "serde", "js"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1